Documentations/parser/C++/calc_parser.output
Terminaux inutilisés dans la grammaire

   FORBBIDEN


Grammaire

    0 $accept: commands $end

    1 commands: command END
    2         | command END COMMENT

    3 command: SELECT selection FROM provenance condition_close
    4        | SELECT CHAR

    5 selection: ssrecherche ',' selection
    6          | ssrecherche

    7 ssrecherche: '(' command ')'
    8            | FIELD AS field_ou_char
    9            | FIELD

   10 provenance: '(' command ')' AS FIELD
   11           | FIELD AS FIELD
   12           | FIELD

   13 condition_close: %empty
   14                | WHERE condition

   15 condition: field_ou_char_ou_command COMPARAISON field_ou_char_ou_command LOGIQUE condition
   16          | field_ou_char_ou_command COMPARAISON field_ou_char_ou_command

   17 field_ou_char: FIELD
   18              | CHAR

   19 field_ou_char_ou_command: field_ou_char
   20                         | '(' command ')'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 7 10 20
')' (41) 7 10 20
',' (44) 5
error (256)
SELECT (258) 3 4
FIELD (259) 8 9 10 11 12 17
CHAR (260) 4 18
FROM (261) 3
WHERE (262) 14
COMPARAISON (263) 15 16
LOGIQUE (264) 15
AS (265) 8 10 11
END (266) 1 2
COMMENT (267) 2
FORBBIDEN (268)


Non-terminaux, suivis des règles où ils apparaissent

$accept (17)
    à gauche: 0
commands (18)
    à gauche: 1 2, à droite: 0
command (19)
    à gauche: 3 4, à droite: 1 2 7 10 20
selection (20)
    à gauche: 5 6, à droite: 3 5
ssrecherche (21)
    à gauche: 7 8 9, à droite: 5 6
provenance (22)
    à gauche: 10 11 12, à droite: 3
condition_close (23)
    à gauche: 13 14, à droite: 3
condition (24)
    à gauche: 15 16, à droite: 14 15
field_ou_char (25)
    à gauche: 17 18, à droite: 8 19
field_ou_char_ou_command (26)
    à gauche: 19 20, à droite: 15 16


État 0

    0 $accept: . commands $end

    SELECT  décalage et aller à l'état 1

    commands  aller à l'état 2
    command   aller à l'état 3


État 1

    3 command: SELECT . selection FROM provenance condition_close
    4        | SELECT . CHAR

    FIELD  décalage et aller à l'état 4
    CHAR   décalage et aller à l'état 5
    '('    décalage et aller à l'état 6

    selection    aller à l'état 7
    ssrecherche  aller à l'état 8


État 2

    0 $accept: commands . $end

    $end  décalage et aller à l'état 9


État 3

    1 commands: command . END
    2         | command . END COMMENT

    END  décalage et aller à l'état 10


État 4

    8 ssrecherche: FIELD . AS field_ou_char
    9            | FIELD .

    AS  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 9 (ssrecherche)


État 5

    4 command: SELECT CHAR .

    $défaut  réduction par utilisation de la règle 4 (command)


État 6

    7 ssrecherche: '(' . command ')'

    SELECT  décalage et aller à l'état 1

    command  aller à l'état 12


État 7

    3 command: SELECT selection . FROM provenance condition_close

    FROM  décalage et aller à l'état 13


État 8

    5 selection: ssrecherche . ',' selection
    6          | ssrecherche .

    ','  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 6 (selection)


État 9

    0 $accept: commands $end .

    $défaut  accepter


État 10

    1 commands: command END .
    2         | command END . COMMENT

    COMMENT  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 1 (commands)


État 11

    8 ssrecherche: FIELD AS . field_ou_char

    FIELD  décalage et aller à l'état 16
    CHAR   décalage et aller à l'état 17

    field_ou_char  aller à l'état 18


État 12

    7 ssrecherche: '(' command . ')'

    ')'  décalage et aller à l'état 19


État 13

    3 command: SELECT selection FROM . provenance condition_close

    FIELD  décalage et aller à l'état 20
    '('    décalage et aller à l'état 21

    provenance  aller à l'état 22


État 14

    5 selection: ssrecherche ',' . selection

    FIELD  décalage et aller à l'état 4
    '('    décalage et aller à l'état 6

    selection    aller à l'état 23
    ssrecherche  aller à l'état 8


État 15

    2 commands: command END COMMENT .

    $défaut  réduction par utilisation de la règle 2 (commands)


État 16

   17 field_ou_char: FIELD .

    $défaut  réduction par utilisation de la règle 17 (field_ou_char)


État 17

   18 field_ou_char: CHAR .

    $défaut  réduction par utilisation de la règle 18 (field_ou_char)


État 18

    8 ssrecherche: FIELD AS field_ou_char .

    $défaut  réduction par utilisation de la règle 8 (ssrecherche)


État 19

    7 ssrecherche: '(' command ')' .

    $défaut  réduction par utilisation de la règle 7 (ssrecherche)


État 20

   11 provenance: FIELD . AS FIELD
   12           | FIELD .

    AS  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 12 (provenance)


État 21

   10 provenance: '(' . command ')' AS FIELD

    SELECT  décalage et aller à l'état 1

    command  aller à l'état 25


État 22

    3 command: SELECT selection FROM provenance . condition_close

    WHERE  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (condition_close)

    condition_close  aller à l'état 27


État 23

    5 selection: ssrecherche ',' selection .

    $défaut  réduction par utilisation de la règle 5 (selection)


État 24

   11 provenance: FIELD AS . FIELD

    FIELD  décalage et aller à l'état 28


État 25

   10 provenance: '(' command . ')' AS FIELD

    ')'  décalage et aller à l'état 29


État 26

   14 condition_close: WHERE . condition

    FIELD  décalage et aller à l'état 16
    CHAR   décalage et aller à l'état 17
    '('    décalage et aller à l'état 30

    condition                 aller à l'état 31
    field_ou_char             aller à l'état 32
    field_ou_char_ou_command  aller à l'état 33


État 27

    3 command: SELECT selection FROM provenance condition_close .

    $défaut  réduction par utilisation de la règle 3 (command)


État 28

   11 provenance: FIELD AS FIELD .

    $défaut  réduction par utilisation de la règle 11 (provenance)


État 29

   10 provenance: '(' command ')' . AS FIELD

    AS  décalage et aller à l'état 34


État 30

   20 field_ou_char_ou_command: '(' . command ')'

    SELECT  décalage et aller à l'état 1

    command  aller à l'état 35


État 31

   14 condition_close: WHERE condition .

    $défaut  réduction par utilisation de la règle 14 (condition_close)


État 32

   19 field_ou_char_ou_command: field_ou_char .

    $défaut  réduction par utilisation de la règle 19 (field_ou_char_ou_command)


État 33

   15 condition: field_ou_char_ou_command . COMPARAISON field_ou_char_ou_command LOGIQUE condition
   16          | field_ou_char_ou_command . COMPARAISON field_ou_char_ou_command

    COMPARAISON  décalage et aller à l'état 36


État 34

   10 provenance: '(' command ')' AS . FIELD

    FIELD  décalage et aller à l'état 37


État 35

   20 field_ou_char_ou_command: '(' command . ')'

    ')'  décalage et aller à l'état 38


État 36

   15 condition: field_ou_char_ou_command COMPARAISON . field_ou_char_ou_command LOGIQUE condition
   16          | field_ou_char_ou_command COMPARAISON . field_ou_char_ou_command

    FIELD  décalage et aller à l'état 16
    CHAR   décalage et aller à l'état 17
    '('    décalage et aller à l'état 30

    field_ou_char             aller à l'état 32
    field_ou_char_ou_command  aller à l'état 39


État 37

   10 provenance: '(' command ')' AS FIELD .

    $défaut  réduction par utilisation de la règle 10 (provenance)


État 38

   20 field_ou_char_ou_command: '(' command ')' .

    $défaut  réduction par utilisation de la règle 20 (field_ou_char_ou_command)


État 39

   15 condition: field_ou_char_ou_command COMPARAISON field_ou_char_ou_command . LOGIQUE condition
   16          | field_ou_char_ou_command COMPARAISON field_ou_char_ou_command .

    LOGIQUE  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 16 (condition)


État 40

   15 condition: field_ou_char_ou_command COMPARAISON field_ou_char_ou_command LOGIQUE . condition

    FIELD  décalage et aller à l'état 16
    CHAR   décalage et aller à l'état 17
    '('    décalage et aller à l'état 30

    condition                 aller à l'état 41
    field_ou_char             aller à l'état 32
    field_ou_char_ou_command  aller à l'état 33


État 41

   15 condition: field_ou_char_ou_command COMPARAISON field_ou_char_ou_command LOGIQUE condition .

    $défaut  réduction par utilisation de la règle 15 (condition)
